Q12906 - Deque 제거 ArrayList 사용.